# 2D-Platformer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
resources/maps/: untitled.tmx
resources/sprites/: aeris_attacking_animation_spritesheet2.png.kra  aeris_attacking_animation_spritesheet3.png.kra
scripts/: run_cppcheck.sh
src/: Constants.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  InputState.hpp  MapHelper.cpp  MapHelper.hpp  MapLayer.hpp  Note.cpp  Note.hpp  Player.cpp  Player.hpp  TextureHolder.cpp  TextureHolder.hpp  World.cpp  World.hpp  main.cpp
